# cortex-contract

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  deny.toml  feature_schema.toml  requirements-dev.txt
.github/workflows/: ci.yml
proto/: feature_record.proto  prediction_record.proto
proto/cortex/contract/v1/: feature_record.proto  prediction_record.proto
python/: README.md  pyproject.toml
python/cortex_contract/: __init__.py  feature_record_pb2.py  feature_record_pb2.pyi  prediction_record_pb2.py  prediction_record_pb2.pyi
rust/: Cargo.toml  README.md  build.rs
rust/examples/: roundtrip_fixture.rs
rust/src/: error.rs  record.rs  schema.rs  store.rs
rust/src/store/: redis.rs
rust/tests/: record.rs  schema.rs
scripts/: check_roundtrip.py  gen_python_package.sh
src/: codec.rs  error.rs  keys.rs  lib.rs  record.rs  schema.rs
src/store/: mod.rs  redis.rs
tests/: keys.rs  record.rs  schema.rs
